crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO quad_point_tbl VALUES (NULL), (NULL), (NULL);"
---
InsertStmt@0..57
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..26
    Ident@12..26 "quad_point_tbl"
  Whitespace@26..27 " "
  SelectStmt@27..55
    Values@27..33 "VALUES"
    Whitespace@33..34 " "
    Ascii40@34..35 "("
    List@35..39
      AConst@35..39
        NullP@35..39 "NULL"
    Ascii41@39..40 ")"
    Ascii44@40..41 ","
    Whitespace@41..42 " "
    Ascii40@42..43 "("
    List@43..47
      AConst@43..47
        NullP@43..47 "NULL"
    Ascii41@47..48 ")"
    Ascii44@48..49 ","
    Whitespace@49..50 " "
    Ascii40@50..51 "("
    List@51..55
      AConst@51..55
        NullP@51..55 "NULL"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

