crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX sp_quad_ind ON quad_point_tbl USING spgist (p);
---
IndexStmt@0..60
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..24 "sp_quad_ind"
  Whitespace@24..25 " "
  On@25..27 "ON"
  Whitespace@27..28 " "
  RangeVar@28..42
    Ident@28..42 "quad_point_tbl"
  Whitespace@42..43 " "
  Using@43..48 "USING"
  Whitespace@48..49 " "
  Ident@49..55 "spgist"
  Whitespace@55..56 " "
  Ascii40@56..57 "("
  IndexElem@57..58
    Ident@57..58 "p"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

