crates/pg_syntax/tests/snapshots/postgres_regress/create_index_spgist@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT count(*) FROM quad_point_tbl WHERE p IS NULL;
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
  Ascii41@14..15 ")"
  Whitespace@15..16 " "
  From@16..20 "FROM"
  Whitespace@20..21 " "
  RangeVar@21..35
    Ident@21..35 "quad_point_tbl"
  Whitespace@35..36 " "
  Where@36..41 "WHERE"
  Whitespace@41..42 " "
  NullTest@42..51
    ColumnRef@42..43
      Ident@42..43 "p"
    Whitespace@43..44 " "
    Is@44..46 "IS"
    Whitespace@46..47 " "
    NullP@47..51 "NULL"
  Ascii59@51..52 ";"

